--- a/POI_UPV/src/CSS/LogIn+Signup.css
+++ b/POI_UPV/src/CSS/LogIn+Signup.css
@@ -7,3 +7,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Author     : lluis
 */
 .root{}
+
+.SignUpPrueba{
+    -fx-background-color: linear-gradient(to bottom left, cyan 50%, palegoldenrod 50%);
+}
