--- a/POI_UPV/src/FXML/FXMLDocument.fxml
+++ b/POI_UPV/src/FXML/FXMLDocument.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -19,8 +18,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="605.0" prefWidth="935.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.FXMLDocumentController">
+<VBox prefHeight="1400.0" prefWidth="1800.0" stylesheets="@../resources/estilos.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.FXMLDocumentController">
    <children>
       <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="5.0" VBox.vgrow="NEVER">
          <children>
@@ -107,9 +107,29 @@
       </HBox>
       <SplitPane dividerPositions="0.5" VBox.vgrow="ALWAYS">
          <items>
-            <AnchorPane maxWidth="50.0" prefHeight="512.0" prefWidth="50.0">
+            <AnchorPane maxWidth="575.0" prefHeight="508.0" prefWidth="183.0">
                <children>
-                  <ListView fx:id="lvProblemas" prefHeight="200.0" prefWidth="200.0" />
+                  <VBox alignment="CENTER" prefHeight="50.0" prefWidth="575.0">
+                     <children>
+                        <Label fx:id="labelEnucnciado" text="Problems">
+                           <font>
+                              <Font size="39.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <HBox layoutX="8.0" layoutY="50.0" prefHeight="88.0" prefWidth="575.0">
+                     <children>
+                        <Label />
+                        <Button fx:id="buttonListProblems" maxWidth="70.0" mnemonicParsing="false" onAction="#SelectProblem" prefWidth="70.0" text="List" />
+                        <Button fx:id="buttonRandom" maxWidth="70.0" mnemonicParsing="false" onAction="#getRandomProblem" prefWidth="70.0" text="Random" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="8.0" layoutY="138.0" prefHeight="100.0" prefWidth="575.0">
+                     <children>
+                        <Label fx:id="enunciado" text="Label" />
+                     </children>
+                  </HBox>
                </children></AnchorPane>
             <ScrollPane fx:id="map_scrollpane" hbarPolicy="ALWAYS" onMouseMoved="#muestraPosicion" pannable="true" prefHeight="398.0" prefWidth="358.0" vbarPolicy="ALWAYS">
                <content>
@@ -118,6 +138,11 @@
                         <ImageView fx:id="imageviewCarta" layoutX="-122.0" layoutY="-213.0" onScroll="#zoomControl" pickOnBounds="true">
                            <image>
                               <Image url="@../resources/carta_nautica.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="transportador" fitHeight="350.0" fitWidth="350.0" layoutX="25.0" layoutY="25.0" onMouseDragged="#moverTransportador" onMousePressed="#pressedTransportador" opacity="0.58" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../resources/transportador.png" />
                            </image>
                         </ImageView>
                      </children>
