--- a/POI_UPV/src/CSS/DatePicker.css
+++ b/POI_UPV/src/CSS/DatePicker.css
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 /*https://dx.dragan.ba/javafx-datepicker-custom-css/*/
 
 * {
-	-fx-primary-color: #007acc;
+	-fx-primary-color: #13123A;
 	-fx-secondary-color: #4B6EAF;
 	-fx-light-grey-color: #d1d1d1;
     
