--- a/POI_UPV/src/FXML/FXMLEditarPerfil.fxml
+++ b/POI_UPV/src/FXML/FXMLEditarPerfil.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.FXMLEditarPerfilController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="802.0" stylesheets="@../CSS/Editar%20Perfil.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.FXMLEditarPerfilController">
    <left>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0" styleClass="primary-color" stylesheets="@../CSS/Editar%20Perfil.css" BorderPane.alignment="CENTER">
          <children>
@@ -27,7 +27,7 @@
                         <Image url="@../resources/avatars/avatar3.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="labelAvatar" alignment="CENTER" onMouseClicked="#getAvatar" text="Edit Avatar" textFill="WHITE">
+                  <Label fx:id="labelAvatar" alignment="CENTER" onMouseClicked="#getAvatar" text="Editar Avatar" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -97,19 +97,25 @@
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="buttonAtras" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#atras" prefHeight="50.0" prefWidth="100.0" text="Atrás" />
+                  <Button id="buttonBack" fx:id="buttonAtras" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#atras" prefHeight="50.0" prefWidth="100.0" text="Atrás" />
                </children>
             </VBox>
          </children>
       </VBox>
    </left>
    <center>
-      <VBox prefHeight="740.0" prefWidth="703.0" spacing="50.0" BorderPane.alignment="CENTER">
+      <VBox id="editarPerfilFondo" prefHeight="565.0" prefWidth="500.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
             <Label prefHeight="29.0" prefWidth="880.0" text="Editar Perfil">
                <font>
                   <Font name="System Bold" size="25.0" />
                </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
             </Label>
             <VBox prefHeight="200.0" prefWidth="100.0" spacing="20.0">
                <children>
